# dip

./: .CMakeLists.txt.swp  CMakeLists.txt  CMakeLists.txt.save  README.md
build-classification-Qt_5_15_2_qt5-Debug/: Makefile
classification/: classification.pro
data/: histograma.csv
ejemplos/ejemplos_segmentación/: main.cpp
examples/ejemplos_watershed/: watershed.h  watershedP.cpp
examples/examples_feature_ext_sel/GLCM/: .glcm.cpp.swp  glcm.cpp
examples/examples_feature_ext_sel/first_order/: first_order.cpp  first_order_parallel.cpp
examples/examples_feature_ext_sel/second_order/: CMakeLists.txt  README.MD  asm.cpp  clusterprominence.cpp  clustershade.cpp  diagonalmoment.cpp  dissimilarity.cpp  globalmean.cpp  idm.cpp  internalvariance.cpp  second_order.cpp  uniformity.cpp
examples/examples_feature_ext_sel/second_order/GLCM/: glcm.cpp
examples/examples_feature_ext_sel/second_order/glcm/: contraste.cpp  correlacion.cpp  diferencia_entropia.cpp  diferencia_varianza.cpp  entropia.cpp  glcm.cpp  information_mesure_correlation_1_2.cpp  inverse_diference_moment.cpp  maximo_correlation_coeficient.cpp  second_angular_moment.cpp  sum_averege.cpp  sum_of_square_variance.cpp  sum_variance.cpp  suma_entropia.cpp
examples/examples_feature_ext_sel/shape/geometry/: main.cpp
examples/examples_segmentation/: main.cpp
feature_ext_sel/SecondOrder/: asm.cpp  asm.h  clusterprominence.cpp  clusterprominence.h  clustershade.cpp  clustershade.h  diagonalmoment.cpp  diagonalmoment.h  dissimilarity.cpp  dissimilarity.h  globalmean.cpp  globalmean.h  idm.cpp  idm.h  internalvariance.cpp  internalvariance.h  secondorder.cpp  secondorder.h  uniformity.cpp  uniformity.h
feature_ext_sel/SecondOrder/GLCM/: AVEREGE.cpp  AVEREGE.h  CONTRASTE.cpp  CONTRASTE.h  CORRELATIONCOEFICIENT.cpp  CORRELATIONCOEFICIENT.h  ENTROPIA.cpp  ENTROPIA.h  MESURE.cpp  MESURE.h  MOEMNT.cpp  MOEMNT.h  SECONDANGULAR.cpp  SECONDANGULAR.h  SQUAREVARIANCE.cpp  SQUAREVARIANCE.h  VARIANCE.cpp  VARIANCE.h  imagenes.cpp  imagenes.h
feature_ext_sel/SecondOrder/GLCM_P/: AVEREGE_P.cpp  AVEREGE_P.h  CONTRASTE_P.cpp  CONTRASTE_P.h  CORRELATIONCOEFICIENT_P.cpp  CORRELATIONCOEFICIENT_P.h  ENTROPIA_P.cpp  ENTROPIA_P.h  MESURE_P.cpp  MESURE_P.h  MOEMNT_P.cpp  MOEMNT_P.h  SECONDANGULAR_P.cpp  SECONDANGULAR_P.h  SQUAREVARIANCE_P.cpp  SQUAREVARIANCE_P.h  VARIANCE_P.cpp  VARIANCE_P.h  imagenes_P.cpp  imagenes_P.h
feature_ext_sel/SecondOrder/glcm/: averege.cpp  averege.h  benchmark.cpp  contraste.cpp  contraste.h  correlationcoeficient.cpp  correlationcoeficient.h  entropia.cpp  entropia.h  imagenes.cpp  imagenes.h  mesure.cpp  mesure.h  moment.cpp  moment.h  secondangular.cpp  secondangular.h  squarevariance.cpp  squarevariance.h  variance.cpp  variance.h
feature_ext_sel/SecondOrder/glcm_p/: averege_p.cpp  averege_p.h  contraste_p.cpp  contraste_p.h  correlationcoeficient_p.cpp  correlationcoeficient_p.h  entropia_p.cpp  entropia_p.h  imagenes_p.cpp  imagenes_p.h  mesure_p.cpp  mesure_p.h  moment_p.cpp  moment_p.h  secondangular_p.cpp  secondangular_p.h  squarevariance_p.cpp  squarevariance_p.h  variance_p.cpp  variance_p.h
feature_ext_sel/first_order/: entropy.cpp  entropy.h  entropyparallel.cpp  entropyparallel.h  firstorderclassifiers.cpp  firstorderclassifiers.h  firstorderclassifiersparallel.cpp  firstorderclassifiersparallel.h
feature_ext_sel/second_order/: secondorder.cpp  secondorder.h
feature_ext_sel/shape/geometry/: libreriaGeometria.cpp  libreriaGeometria.h
metrics/performance/: benchmark.cpp
segmentation/Grupo E/: Grupo E.cbp  watershedP.h
segmentation/Watershed/: watershedP.h
